fix(colors): latest adjustments for dark mode

--- a/src/components/_notes.scss
+++ b/src/components/_notes.scss
@@ -11,10 +11,6 @@
 	margin: variables.$gutter 0;
 	padding: variables.$gutter * 0.5 variables.$gutter variables.$gutter * 0.25;
 
-	*:not(pre) {
-		color: inherit;
-	}
-
 	&.wip {
 		color: hsl(var(--alert));
 	}
